# cs575-homework-1-fall-2025

./: .gitignore  README.md  pyproject.toml
src/: Girvan_Newman_stochastic_block_network.py  Girvan_Newman_stochastic_block_network_v2.py  Girvan_Newman_stochastic_block_network_v3.py  barabasi_albert_homework.ipynb  dendrogram_handler.py  dendrogram_handler_v2.py  drawing_utilities.py  getting_started_tutorial.ipynb  graphlets_tutorial.ipynb  network_utilities.py  partitioning_utilities.py
src/homework/: girvan_newman_partitions_homework.ipynb  homework_0_tutorial.ipynb  partitioning_homework.ipynb
src/in_class_exercises/: Homophily.ipynb  Katz_centrality_and_pagerank.ipynb  SIR_practice.ipynb  centrality_examples.ipynb  core_periphery_tutorial.ipynb  deep_walk_in_class_example.ipynb  density_metric_practice.ipynb  eigenvector_and_randomwalk_centrality.ipynb  eigenvector_centrality.ipynb  girvan_newman_tutorial.ipynb  girvan_newman_tutorial_rewire.ipynb  graph_laplacian_tutorial.ipynb  hill_climbing.ipynb  kernigahn-lin_hill_climbing_graph_cut.ipynb  kernighan-lin_hill_climbing_graph_cut.ipynb  modularity_basics.ipynb  random_walk_centrality.ipynb  scale_free_network_practice.ipynb  small_world_networks.ipynb  spectral_modularity_cut.ipynb  stochastic block model.ipynb  stochastic_block_model_tutorial.ipynb  two_ways_tutorial.ipynb  understanding_dendrograms.ipynb
tests/answers/: test_homework_answers.py
tests/general/: test_degree_counter.py  test_get_median_distance.py
tests/homework_0/: test_adjacency_list_graph_creation.py  test_edge_set_graph_creation.py  (+1 more)
(+39 files in other folders)
